--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 torchvision==0.9.1
-numpy==1.19.1
+matplotlib==3.3.1
 einops==0.3.0
 torch==1.8.1
-matplotlib==3.3.1
+numpy==1.19.1
+torchstat==0.0.7
 PyYAML==5.4.1
