--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,8 @@
-num_epochs: 10
-learning_rate: 0.001
-batch_size: 128
-image_resolution: 224
-MNIST: False
-n_classes: 10
-optimizer: adam
+parameters:
+  num_epochs: 10
+  learning_rate: 0.001
+  batch_size: 128
+  image_resolution: 224
+  MNIST: False
+  n_classes: 10
+  optimizer: adam
