--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 parameters:
   num_epochs: 10
   learning_rate: 0.001
-  batch_size: 64
+  batch_size: 256
   image_resolution: 224
   MNIST: False
   n_classes: 10
-  optimizer: adam
+  optimizer: sgd
